made slight changes in contact page. edited in neovim

--- a/ui/vanilla/js/pages/contact.html
+++ b/ui/vanilla/js/pages/contact.html
@@ -22,7 +22,7 @@
         <div id="form-container flex row">
             <div>
                 <form action="" id="contact">
-                
+			<label for="name"><input type="text" /></label>                
                 </form>
             </div>
             <div id="google-maps-container">
