--- a/ui/vanilla/js/pages/about.html
+++ b/ui/vanilla/js/pages/about.html
@@ -3,17 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../../../css/berillium.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/theberylcompany/BerilliumCSS@main/css/berillium.css">
     <title>About Page</title>
 </head>
 <body>
     <div id="app">
-        <mat-icon icon="add box"></mat-icon>
     </div>
-    <script src="/ui/vanilla/js/global.js"></script>
-    <script src="/js/berilliumCSS/material.js"></script>
-    <script src="../about.js"></script>
-    <script src="/ui/vanilla/js/elements/icon/icon-custom.js"></script>
+    <script async src="/vanilla/js/global.js"></script>
+    <script async src="../about.js"></script>
+    <script async src="/vanilla/js/elements/icon/icon-custom.js"></script>
    
 </body>
 </html>
