--- a/ui/vanilla/js/pages/contact.html
+++ b/ui/vanilla/js/pages/contact.html
@@ -22,7 +22,9 @@
         <div id="form-container flex row">
             <div>
                 <form action="" id="contact">
-			<label for="name"><input type="text" /></label>                
+			<label for="name"> Name
+                <input type="text" />
+            </label>                
                 </form>
             </div>
             <div id="google-maps-container">
